--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                     <strong>Email</strong>                                    </strong>
                                 </div>
                                 <div class="col-8">
-                                    <a href="mailto:email@email.com">
-                                        Zoezhang0119@gmail.com
+                                    <a href="mailto:zoezhang0119@gmail.com">
+                                        zoezhang0119@gmail.com
                                     </a>
                                 </div>
                             </div>
